Renamed projects and name spaces. Also setup base of DI more to be built

--- a/BaseApi/BaseApi.csproj
+++ b/BaseApi/BaseApi.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CoreDomain\CoreDomain.csproj" />
     <ProjectReference Include="..\Core\CoreUtilities.csproj" />
   </ItemGroup>
 
