--- a/CoreDomainUnitTests/CoreDomainUnitTests.csproj
+++ b/CoreDomainUnitTests/CoreDomainUnitTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BaseDomain\BaseDomain.csproj" />
+    <ProjectReference Include="..\CoreDomain\CoreDomain.csproj" />
   </ItemGroup>
 
 </Project>
